change font, fix long titles stretching cards, and allow project description to fill card

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
-  /* font-family: 'Source Sans Pro', sans-serif; */
-  font-family: 'kanit';
+  font-family: 'fira sans';
   font-weight: 300;
   display: flex;
   justify-content: center;
@@ -168,7 +167,7 @@ h1 {
   margin: 0;
   padding: 0 15px 15px 15px;
   display: block;
-  width: 200px;
+  width: 270px;
   height: auto;
   overflow-wrap: break-word;
 }
